--- a/index.html
+++ b/index.html
@@ -23,64 +23,69 @@
   <div id="main-navbar">
     <div class="navbar">
       <img id="logo" src="img/logo.png" alt="Mixbook" />
-      <div>
-        <ul class="create-acc">
-          <li>
-            <a href="#" class="hl-link"><strong>Sign Up</strong> </a>
-          </li>
-          <li><a href="#">Login</a></li>
-          <li><a href="#">Help</a></li>
-        </ul>
-        <nav>
-          <ul>
-            <li class="photo-bk">
-              <a href="#">Photo Books</a> <i class="fas fa-caret-down"></i>
-              <div class="drp-dwn-lst">
-                <div class="shadow-hider"></div>
-                <ul>
-                  <li><a href="">Everyday</a></li>
-                  <li><a href="">Family</a></li>
-                  <li><a href="">Kids</a></li>
-                  <li><a href="">Seasonal</a></li>
-                  <li><a href="">Holiday</a></li>
-                  <li><a href="">Romance</a></li>
-                  <li><a href="">Year in Review</a></li>
-                  <li><a href=""></a></li>
-                </ul>
-                <ul>
-                  <li><a href="">Wedding Photo Books</a></li>
-                  <li><a href="">Wedding Guest Books</a></li>
-                  <li><a href="">Travel Photo Books</a></li>
-                  <li><a href="">Baby Photo Books</a></li>
-                  <li><a href="">Sports</a></li>
-                  <li><a href="">Yearbooks</a></li>
-                  <li><a href="">Professional / Business</a></li>
-                  <li><a href=""></a></li>
-                </ul>
-                <ul>
-                  <li><a href="">Volume Discounts</a></li>
-                  <li><a href="">Quick & Easy Books</a></li>
-                  <li><a href=""><strong>Martha Stewart for Mixbook</strong> </a></li>
-                  <li><a href=""><strong>Wedding Collection</strong> </a></li>
-                  <li><a href=""><strong>Designer Collection</strong> </a></li>
-                  <li><a href=""><strong>All</strong> </a></li>
-                </ul>
-              </div>
-            </li>
 
-            <li><a href="">Cards</a> <i class="fas fa-caret-down"></i></li>
-            <li><a href="">Calendars</a></li>
-            <li>
-              <a href="">Home Decore</a> <i class="fas fa-caret-down"></i>
-            </li>
-            <li><a href="">Get Inspired</a></li>
-            <li><a href="">Deals</a></li>
-            <li>
-              <a href=""><i class="fas fa-search"></i></a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+      <!-- nav -->
+      <nav>
+        <!-- acc -->
+        <ul class="acc">
+          <li><a href="" class="hl-link"><strong>Sign Up</strong></li></a>
+          <li><a href="">Login</a> </li>
+          <li><a href="">Help</a> </li>
+        </ul>
+
+        <!-- menu -->
+        <ul class="menu">
+          <div class="photo">
+
+            <li><a href=""><strong>PHOTO BOOKS <i class="fas fa-caret-down"></i></strong></a></li>
+
+            <div>
+              <ul class="menu-list one">
+                <li><a href="">Everyday</a></li>
+                <li><a href="">Family</a></li>
+                <li><a href="">Kids</a></li>
+                <li><a href="">Seasonal</a></li>
+                <li><a href="">Holiday</a></li>
+                <li><a href="">Romance</a></li>
+                <li><a href="">Year in Review</a></li>
+                <li><a href=""></a></li>
+              </ul>
+              <ul class="menu-list two">
+                <li><a href="">Wedding Photo Books</a></li>
+                <li><a href="">Wedding Guest Books</a></li>
+                <li><a href="">Travel Photo Books</a></li>
+                <li><a href="">Baby Photo Books</a></li>
+                <li><a href="">Sports</a></li>
+                <li><a href="">Yearbooks</a></li>
+                <li><a href="">Professional / Business</a></li>
+                <li><a href=""></a></li>
+              </ul>
+              <ul class="menu-list three">
+                <li><a href="">Volume Discounts</a></li>
+                <li><a href="">Quick & Easy Books</a></li>
+                <li><a href=""><strong>Martha Stewart for Mixbook</strong></a></li>
+                <li><a href=""><strong>Wedding Collection</strong></a></li>
+                <li><a href=""><strong>Designer Collection</strong> </a></li>
+                <li><a href=""><strong>All</strong> </a></li>
+              </ul>
+            </div>
+          </div>
+
+
+          <li class="cards"><a href=""><strong>CARDS <i class="fas fa-caret-down"></i></a></strong> </li>
+
+          <li class="cal"><a href=""><strong>CALENDAR</strong></a> </li>
+
+          <li class="decore"><a href=""><strong>HOME DECOR <i class="fas fa-caret-down"></i></strong></a> </li>
+
+          <li class="insp"><a href=""><strong>GET INSPIRED</strong></a> </li>
+
+          <li class="deals"><a href=""><strong>DEALS</strong></a> </li>
+          <li>
+            <a href=""><i class="fas fa-search"></i></a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </div>
 
@@ -143,7 +148,7 @@
           <input type="radio" name="radio-btns" id="mobile" />
 
           <!-- Device Screen -->
-          <div class="device-screen">
+          <!-- <div class="device-screen">
             <iframe class="computer" sandbox="allow-scripts allow-same-origin allow-popups allow-presentation"
               src="https://player.vimeo.com/video/451382969?autoplay=true&amp;background=true&amp;loop=true&amp;muted=true"
               class="mx-qH" allow="autoplay" frameborder="0" data-ready="true"></iframe>
@@ -152,7 +157,7 @@
                 allow-presentation"
               src="https://player.vimeo.com/video/451383013?autoplay=false&amp;background=true&amp;loop=true&amp;muted=true"
               class="mx-vC" allow="autoplay" frameborder="0" data-ready="true"></iframe>
-          </div>
+          </div> -->
           <!-- Device -->
           <div class="devices">
             <div class="navigation-manual">
@@ -324,18 +329,18 @@
         </label>
         <div class="image-display">
           <div class="image-row">
-            <img class="first" src="/dist/img/community/2020-10-08 11.13.51 www.mixbook.com .png" alt="" />
-            <img src="/dist/img/community/2020-10-08 11.14.08 www.mixbook.com .png" alt="" />
-            <img src="/dist/img/community/2020-10-08 11.14.41 www.mixbook.com .png" alt="" />
-            <img src="/dist/img/community/2020-10-08 11.14.56 www.mixbook.com .png" alt="" />
-            <img src="/dist/img/community/2020-10-08 11.15.10 www.mixbook.com .png" alt="" />
-            <img src="/dist/img/community/2020-10-08 11.15.22 www.mixbook.com .png" alt="" />
-            <img src="/dist/img/community/2020-10-08 11.15.38 www.mixbook.com .png" alt="" />
-            <img src="/dist/img/community/2020-10-08 11.15.48 www.mixbook.com .png" alt="" />
-            <img src="/dist/img/community/2020-10-08 11.16.00 www.mixbook.com .png" alt="" />
-            <img src="/dist/img/community/2020-10-08 11.16.13 www.mixbook.com .png" alt="" />
-            <img src="/dist/img/community/2020-10-08 11.16.25 www.mixbook.com .png" alt="" />
-            <img src="/dist/img/community/2020-10-08 11.16.37 www.mixbook.com .png" alt="" />
+            <img class="first" src="/img/community/2020-10-08 11.13.51 www.mixbook.com .png" alt="" />
+            <img src="/img/community/2020-10-08 11.14.08 www.mixbook.com .png" alt="" />
+            <img src="/img/community/2020-10-08 11.14.41 www.mixbook.com .png" alt="" />
+            <img src="/img/community/2020-10-08 11.14.56 www.mixbook.com .png" alt="" />
+            <img src="/img/community/2020-10-08 11.15.10 www.mixbook.com .png" alt="" />
+            <img src="/img/community/2020-10-08 11.15.22 www.mixbook.com .png" alt="" />
+            <img src="/img/community/2020-10-08 11.15.38 www.mixbook.com .png" alt="" />
+            <img src="/img/community/2020-10-08 11.15.48 www.mixbook.com .png" alt="" />
+            <img src="/img/community/2020-10-08 11.16.00 www.mixbook.com .png" alt="" />
+            <img src="/img/community/2020-10-08 11.16.13 www.mixbook.com .png" alt="" />
+            <img src="/img/community/2020-10-08 11.16.25 www.mixbook.com .png" alt="" />
+            <img src="/img/community/2020-10-08 11.16.37 www.mixbook.com .png" alt="" />
           </div>
         </div>
 
