--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="css/utilities.css" />
   <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" media="screen and (max-width: 1300px)" href="css/responsive.css">
   <title>Photo Books, Photo Cards, Scrapbooks, Yearbooks & Calendars</title>
 </head>
 
@@ -148,7 +149,7 @@
           <input type="radio" name="radio-btns" id="mobile" />
 
           <!-- Device Screen -->
-          <!-- <div class="device-screen">
+          <div class="device-screen">
             <iframe class="computer" sandbox="allow-scripts allow-same-origin allow-popups allow-presentation"
               src="https://player.vimeo.com/video/451382969?autoplay=true&amp;background=true&amp;loop=true&amp;muted=true"
               class="mx-qH" allow="autoplay" frameborder="0" data-ready="true"></iframe>
@@ -157,7 +158,7 @@
                 allow-presentation"
               src="https://player.vimeo.com/video/451383013?autoplay=false&amp;background=true&amp;loop=true&amp;muted=true"
               class="mx-vC" allow="autoplay" frameborder="0" data-ready="true"></iframe>
-          </div> -->
+          </div>
           <!-- Device -->
           <div class="devices">
             <div class="navigation-manual">
@@ -329,18 +330,18 @@
         </label>
         <div class="image-display">
           <div class="image-row">
-            <img class="first" src="/img/community/2020-10-08 11.13.51 www.mixbook.com .png" alt="" />
-            <img src="/img/community/2020-10-08 11.14.08 www.mixbook.com .png" alt="" />
-            <img src="/img/community/2020-10-08 11.14.41 www.mixbook.com .png" alt="" />
-            <img src="/img/community/2020-10-08 11.14.56 www.mixbook.com .png" alt="" />
-            <img src="/img/community/2020-10-08 11.15.10 www.mixbook.com .png" alt="" />
-            <img src="/img/community/2020-10-08 11.15.22 www.mixbook.com .png" alt="" />
-            <img src="/img/community/2020-10-08 11.15.38 www.mixbook.com .png" alt="" />
-            <img src="/img/community/2020-10-08 11.15.48 www.mixbook.com .png" alt="" />
-            <img src="/img/community/2020-10-08 11.16.00 www.mixbook.com .png" alt="" />
-            <img src="/img/community/2020-10-08 11.16.13 www.mixbook.com .png" alt="" />
-            <img src="/img/community/2020-10-08 11.16.25 www.mixbook.com .png" alt="" />
-            <img src="/img/community/2020-10-08 11.16.37 www.mixbook.com .png" alt="" />
+            <img class="first" src="img/community/2020-10-08 11.13.51 www.mixbook.com .png" alt="" />
+            <img src="img/community/2020-10-08 11.14.08 www.mixbook.com .png" alt="" />
+            <img src="img/community/2020-10-08 11.14.41 www.mixbook.com .png" alt="" />
+            <img src="img/community/2020-10-08 11.14.56 www.mixbook.com .png" alt="" />
+            <img src="img/community/2020-10-08 11.15.10 www.mixbook.com .png" alt="" />
+            <img src="img/community/2020-10-08 11.15.22 www.mixbook.com .png" alt="" />
+            <img src="img/community/2020-10-08 11.15.38 www.mixbook.com .png" alt="" />
+            <img src="img/community/2020-10-08 11.15.48 www.mixbook.com .png" alt="" />
+            <img src="img/community/2020-10-08 11.16.00 www.mixbook.com .png" alt="" />
+            <img src="img/community/2020-10-08 11.16.13 www.mixbook.com .png" alt="" />
+            <img src="img/community/2020-10-08 11.16.25 www.mixbook.com .png" alt="" />
+            <img src="img/community/2020-10-08 11.16.37 www.mixbook.com .png" alt="" />
           </div>
         </div>
 
@@ -468,6 +469,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Illum, nihil?
               </p>
+              <p class="user">Tsunade</p>
             </div>
             <div class="rating-box">
               <p class="star">
@@ -753,7 +755,7 @@
 
         <!-- Programs -->
         <div class="programs">
-          <h5><strong>Products</strong></h5>
+          <h5><strong>Porgrams</strong></h5>
           <ul>
             <strong>
               <a href="">
